docs : add security definition for jwt
